<resources>
    <string name="app_name">Firebase_Email_Authentication</string>
    <string name="login">Login</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account_click_here_to_sign_in">don\'t have an account! click here to Sign in</string>
    <string name="register">Register</string>
    <string name="already_have_account_goto_login_page">Already have account!! goto Login page</string>
    <string name="logout">Logout</string>
</resources>