<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@color/white"
    tools:context=".LoginActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="24sp"
        android:textColor="@color/black"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/emailEt"
        android:hint="@string/e_mail"
        android:textColorHint="#7C7C7C"
        android:textColor="@color/black"
        android:inputType="textEmailAddress"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/passwordEt"
        android:hint="@string/password"
        android:textColorHint="#7C7C7C"
        android:textColor="@color/black"
        android:inputType="textPassword"/>

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="loginBtnClicked"
        android:text="@string/login"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/don_t_have_an_account_click_here_to_sign_in"
        android:textSize="16sp"
        android:clickable="true"
        android:onClick="gotoRegisterAccountActivity"
        android:textColor="#686868"/>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progress_bar"
        android:visibility="gone"/>

</LinearLayout>