<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/white"
    android:padding="10dp"
    tools:context=".RegisterActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textSize="24sp"
        android:textColor="@color/black"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/registerEmailEt"
        android:hint="@string/e_mail"
        android:textColorHint="#7C7C7C"
        android:textColor="@color/black"
        android:inputType="textEmailAddress"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/registerPasswordEt"
        android:hint="@string/password"
        android:textColorHint="#7C7C7C"
        android:textColor="@color/black"
        android:inputType="textPassword"/>

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="registerButtonClicked"
        android:text="@string/register"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_have_account_goto_login_page"
        android:textSize="16sp"
        android:clickable="true"
        android:onClick="gotoLoginAccountActivity"
        android:textColor="#686868"/>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progress_bar"
        android:visibility="gone"/>

</LinearLayout>